migrated to supabase rest api

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-DATABASE_URL=postgresql://postgres:[PASSWORD]@db.[PROJECT-ID].supabase.co:5432/postgres
+SUPABASE_URL=https://[PROJECT-ID].supabase.co
+SUPABASE_SERVICE_ROLE_KEY=
+SLACK_BOT_TOKEN=
 SLACK_SIGNING_SECRET=
